# folder-summary

./: .gitignore  Cargo.toml  README.md  config.toml
src/: cache.rs  error.rs  lib.rs  main.rs  summary.rs
src/analyzer/: javascript_analyzer.rs  mod.rs  python_analyzer.rs  rust_analyzer.rs  static_analysis.rs
src/config/: mod.rs
src/llm/: gemini.rs  mod.rs  ollama.rs  openai.rs
src/utils/: file_utils.rs  mod.rs
