[package]
name = "folder-summary"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.3"
ignore = "0.4"
regex = "1.5"
serde_json = "1.0"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
clap = { version = "4.0", features = ["derive"] }
toml = "0.5"
log = "0.4"
env_logger = "0.10"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
syn = { version = "1.0", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
proc-macro2 = { version ="1.0", features = ["span-locations"] }
chrono = "0.4"
globset = "0.4"
rustpython-parser = "0.1.2"

[package.metadata]
default-run = "folder-summary"
